# Miaominal

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  build.rs
.github/: README.md  README_zh.md
crates/miaominal-agent/: Cargo.toml
crates/miaominal-agent/src/: backend.rs  capabilities.rs  channel.rs  chat.rs  error.rs  jobs.rs  lib.rs  path_guard.rs  policy.rs  reasoning.rs  runtime.rs  tools.rs  web.rs
crates/miaominal-agent/src/tools/: apply_patch.rs  approval.rs  glob.rs  grep.rs  job.rs  list.rs  mod.rs  patch_engine.rs  read.rs  rig_adapter.rs  run_shell.rs  web_fetch.rs  web_search.rs  windows.rs  workspace_info.rs
crates/miaominal-agent/src/tools/job_scripts/: posix_cleanup.sh  posix_poll.sh  posix_process_helpers.sh  posix_scavenge.sh  posix_start_child.sh  posix_start_launcher.sh  posix_start_runner.sh  posix_stop.sh  windows_child_wrapper.ps1  windows_cleanup.ps1  windows_detached_launcher.cs  windows_poll.ps1  windows_scavenge.ps1  windows_start_launcher.ps1  windows_start_monitor.ps1  windows_stop.ps1
crates/miaominal-secrets/: Cargo.toml
crates/miaominal-secrets/src/: credential_backend.rs  lib.rs  model.rs  protected_memory.rs  secret_store.rs
crates/miaominal-services/: Cargo.toml
crates/miaominal-services/src/: lib.rs
crates/miaominal-services/src/services/: agent_service.rs  app_services.rs  chat_service.rs  keychain_service.rs  profile_service.rs  settings_service.rs  sftp_service.rs  sync_service.rs  terminal_service.rs
crates/miaominal-settings/: Cargo.toml
crates/miaominal-settings/src/: data.rs  global.rs  lib.rs  model.rs  theme.rs
crates/miaominal-sftp/: Cargo.toml
crates/miaominal-sftp/src/: lib.rs
crates/miaominal-sftp/src/sftp/: paths.rs  session.rs  transfer.rs
crates/miaominal-ssh/: Cargo.toml
crates/miaominal-ssh/src/: lib.rs
crates/miaominal-ssh/src/ssh/: auth.rs  forwarding.rs  monitor.rs  session.rs
crates/miaominal-ssh/src/ssh/monitor_scripts/: linux.sh  macos.sh  windows.ps1
crates/miaominal-storage/: Cargo.toml
crates/miaominal-storage/src/: chat_store.rs  config_store.rs  keychain_store.rs  known_hosts_store.rs  lib.rs  settings_store.rs
crates/miaominal-storage/src/config_store/: import.rs  migration.rs  store.rs
crates/miaominal-storage/src/config_store/import/: finalshell.rs  openssh.rs  putty.rs  securecrt.rs
crates/miaominal-sync/: Cargo.toml
crates/miaominal-sync/src/: lib.rs  model.rs
crates/miaominal-sync/src/sync/: credential_migration.rs  encryption.rs  engine.rs  github_gist.rs  payload.rs  providers.rs  store.rs
crates/miaominal-ui/: Cargo.toml
crates/miaominal-ui/src/: lib.rs  ui.rs
crates/miaominal-ui/src/ui/: assets.rs  components.rs  i18n.rs  markdown_languages.rs  markdown_view.rs  shell.rs  theme.rs
crates/miaominal-ui/src/ui/components/: badge.rs  card_surface.rs  dialog.rs  editor_button.rs  editor_footer_actions.rs  fab_button.rs  icon_button.rs  icon_tile.rs  input_hint.rs  list_item_card.rs  md3_select.rs  md3_spinner.rs  md3_switch.rs  page_chrome.rs  pill_label.rs  search_input.rs  section_card.rs  segmented_switch.rs  setting_field_with_reset_action.rs  text_input.rs
crates/miaominal-ui/src/ui/i18n/locales/: en.toml  zh-CN.toml
crates/miaominal-ui/src/ui/shell/: actions.rs  app_view.rs  bootstrap.rs  bootstrap_form_factory.rs  bootstrap_loaders.rs  bootstrap_subscriptions.rs  containers.rs  controllers.rs  forms.rs  layout.rs  metrics.rs  navigation.rs  pages.rs  panes.rs  render.rs  session.rs  session_agent.rs  session_agent_stream_batch.rs  session_agent_view.rs  settings_labels.rs  sftp_browser.rs  state.rs  support.rs  system_file_icons.rs  terminal.rs  workspace.rs
crates/miaominal-ui/src/ui/shell/actions/: forwarding_sync.rs  keychain.rs  nav.rs  notification.rs  onboarding.rs  profile.rs  profile_import.rs  search.rs  session.rs  session_agent.rs  session_agent_attachments.rs  session_sftp.rs  session_sftp_drag_selection.rs  session_sftp_edit.rs  session_sftp_prompt.rs  session_sftp_sync.rs  session_sftp_transfer.rs  session_terminal.rs  settings.rs
crates/miaominal-ui/src/ui/shell/actions/settings/: ai_providers.rs  appearance.rs  key_bindings.rs  labels.rs  local_data_reset.rs  local_vault.rs  misc.rs  secret_visibility.rs  sync.rs  web_search.rs
crates/miaominal-ui/src/ui/shell/controllers/: agent.rs  keychain.rs  local_vault_root.rs  root.rs  session.rs  settings.rs  sftp.rs
crates/miaominal-ui/src/ui/shell/controllers/agent/: attachments.rs  conversation.rs  history.rs  prompt.rs  recovery.rs  runtime.rs  search.rs  session_ports.rs  stream.rs  tasks.rs  tool_interaction.rs
crates/miaominal-ui/src/ui/shell/controllers/session/: events.rs  forwarding.rs  lifecycle.rs  profile_import.rs  search.rs  snippets.rs  terminal.rs
crates/miaominal-ui/src/ui/shell/controllers/settings/: ai_providers.rs  local_data_reset.rs  local_vault.rs  secret_visibility.rs  sync.rs  web_search.rs
crates/miaominal-ui/src/ui/shell/layout/: chrome.rs  session_agent_composer.rs  session_agent_conversation.rs  session_agent_history.rs  session_agent_mentions.rs  session_agent_panel.rs  session_agent_tool_parse.rs  session_agent_tool_ui.rs  session_agent_tools.rs  session_agent_utils.rs  sidebar.rs  workspace.rs  workspace_monitor.rs  workspace_panes.rs  workspace_session_status.rs  workspace_side_panel.rs  workspace_snippets.rs  workspace_terminal_menu.rs  workspace_terminal_search.rs
crates/miaominal-ui/src/ui/shell/pages/: empty_state.rs  forward.rs  hosts.rs  onboarding.rs  settings.rs
crates/miaominal-ui/src/ui/shell/pages/forward/: components.rs  handlers.rs  render.rs  render_helpers.rs
crates/miaominal-ui/src/ui/shell/pages/hosts/: components.rs  render.rs
crates/miaominal-ui/src/ui/shell/pages/keychain/: render.rs
crates/miaominal-ui/src/ui/shell/pages/settings/: render.rs
crates/miaominal-ui/src/ui/shell/pages/sftp/: render.rs
crates/miaominal-ui/src/ui/shell/pages/snippets/: render.rs
crates/miaominal-ui/src/ui/shell/support/: animation.rs  custom_glyphs.rs  group_accent.rs  inputs.rs  sync_ops.rs  terminal.rs  terminal_element.rs
(+178 files in other folders)
