[package]
name = "miaominal"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "Desktop terminal application with SSH, SFTP, configuration sync, and secure credential storage."
readme = "README.md"
repository = "https://github.com/cppakko/miaominal"
homepage = "https://github.com/cppakko/miaominal"
default-run = "miaominal"

[workspace]
members = [
    ".",
    "crates/miaominal-core",
    "crates/miaominal-agent",
    "crates/miaominal-paths",
    "crates/miaominal-secrets",
    "crates/miaominal-services",
    "crates/miaominal-settings",
    "crates/miaominal-sftp",
    "crates/miaominal-ssh",
    "crates/miaominal-storage",
    "crates/miaominal-sync",
    "crates/miaominal-terminal",
    "crates/miaominal-ui",
]
resolver = "3"

[workspace.dependencies]
aes-gcm = "0.10"
alacritty_terminal = "0.26"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
directories = "5"
env_logger = "0.11"
fontdb = { version = "0.23", features = ["fontconfig", "fontconfig-parser"] }
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "wayland",
    "x11",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
image = { version = "0.25", default-features = false }
zed-markdown = { package = "markdown", git = "https://github.com/zed-industries/zed" }
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
log = "0.4"
material-colors = "0.4.2"
notify = "6"
open = "5"
rand = "0.10.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rig-core = "0.38.1"
schemars = "1"
settings = { git = "https://github.com/zed-industries/zed" }
theme = { git = "https://github.com/zed-industries/zed" }
theme_settings = { git = "https://github.com/zed-industries/zed" }
resvg = "0.45.1"
rfd = "0.15"
roxmltree = "0.20"
russh = "0.60.1"
russh-sftp = "2.1.1"
rust-embed = "8.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tiny-skia = "0.11.4"
tokio = { version = "1", features = [
    "fs",
    "process",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
toml = "0.8"
unicode-segmentation = "1"
usvg = "0.45.1"
uuid = { version = "1", features = ["v4"] }
winresource = "0.1"

[dependencies]
miaominal-core = { path = "crates/miaominal-core" }
miaominal-paths = { path = "crates/miaominal-paths" }
miaominal-settings = { path = "crates/miaominal-settings" }
miaominal-ui = { path = "crates/miaominal-ui" }
alacritty_terminal = "0.26"
anyhow = "1"
directories = "5"
env_logger = "0.11"
fontdb = { version = "0.23", features = ["fontconfig", "fontconfig-parser"] }
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "wayland",
    "x11",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
log = "0.4"
material-colors = "0.4.2"
open = "5"
rand = "0.10.1"
rfd = "0.15"
russh = "0.60.1"
russh-sftp = "2.1.1"
rust-embed = "8.11.0"
serde = { version = "1", features = ["derive"] }
sys-locale = "0.3"
tokio = { version = "1", features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
toml = "0.8"
unicode-segmentation = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
notify = "6"
roxmltree = "0.20"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = [
    "ico",
    "png",
] }
resvg = "0.45.1"
tiny-skia = "0.11.4"
usvg = "0.45.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.bundle]
identifier = "dev.akko.miaominal"
name = "Miaominal"
icon = ["assets/generated/app-icon@2x.png", "assets/generated/app-icon.png"]
category = "Developer Tool"
short_description = "Desktop terminal application for SSH, SFTP, and secure configuration management."
long_description = """
Miaominal is a desktop terminal application built with Rust, GPUI, and alacritty_terminal.
It focuses on SSH sessions, SFTP file transfers, configuration management, and secure credential storage.
"""
linux_use_terminal = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
