[package]
name = "miaominal"
version.workspace = true
edition.workspace = true
build = "build.rs"
description = "Desktop terminal application with SSH, SFTP, configuration sync, and secure credential storage."
readme = "README.md"
repository = "https://github.com/cppakko/miaominal"
homepage = "https://github.com/cppakko/miaominal"
default-run = "miaominal"

[workspace]
members = [
    ".",
    "crates/miaominal-core",
    "crates/miaominal-agent",
    "crates/miaominal-paths",
    "crates/miaominal-secrets",
    "crates/miaominal-services",
    "crates/miaominal-settings",
    "crates/miaominal-sftp",
    "crates/miaominal-ssh",
    "crates/miaominal-storage",
    "crates/miaominal-sync",
    "crates/miaominal-terminal",
    "crates/miaominal-ui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
aes-gcm = "0.11.0"
alacritty_terminal = "0.26"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
directories = "6.0.0"
env_logger = "0.11"
fontdb = { version = "0.23", features = ["fontconfig", "fontconfig-parser"] }
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
    "font-kit",
    "wayland",
    "x11",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = [
    "tree-sitter-bash",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-css",
    "tree-sitter-diff",
    "tree-sitter-go",
    "tree-sitter-html",
    "tree-sitter-java",
    "tree-sitter-javascript",
    "tree-sitter-markdown",
    "tree-sitter-python",
    "tree-sitter-rust",
    "tree-sitter-typescript",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
image = { version = "0.25", default-features = false }
keyring = { version = "4.1.2", features = [
    "apple-native-keyring-store",
    "windows-native-keyring-store",
    "zbus-secret-service-keyring-store",
] }
log = "0.4.33"
material-colors = "0.4.2"
notify = "8.2.0"
open = "5.3.6"
rand = "0.10.1"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "query",
    "rustls",
] }
rig-core = "0.39.0"
schemars = "1"
settings = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
theme = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
theme_settings = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
resvg = "0.47.0"
rfd = "0.17.2"
roxmltree = "0.21.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
russh = "0.61.2"
russh-sftp = "2.3.0"
rust-embed = "8.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
tempfile = "3.27.0"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { version = "1", features = [
    "fs",
    "process",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
toml = "1.1.2"
unicode-segmentation = "1.13.3"
uuid = { version = "1.23.4", features = ["v4"] }
winresource = "0.1"

[dependencies]
miaominal-core = { path = "crates/miaominal-core" }
miaominal-paths = { path = "crates/miaominal-paths" }
miaominal-settings = { path = "crates/miaominal-settings" }
miaominal-ui = { path = "crates/miaominal-ui" }
aes-gcm.workspace = true
alacritty_terminal.workspace = true
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
directories.workspace = true
env_logger.workspace = true
fontdb.workspace = true
futures.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
keyring.workspace = true
log.workspace = true
material-colors.workspace = true
notify.workspace = true
open.workspace = true
rand.workspace = true
reqwest.workspace = true
rfd.workspace = true
roxmltree.workspace = true
russh.workspace = true
russh-sftp.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sys-locale.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
unicode-segmentation.workspace = true
uuid.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
image = { workspace = true, features = ["png"] }

[build-dependencies]
image = { workspace = true, features = ["ico", "png"] }
resvg.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource.workspace = true

[package.metadata.bundle]
identifier = "dev.akko.miaominal"
name = "Miaominal"
icon = ["assets/generated/app-icon@2x.png", "assets/generated/app-icon.png"]
category = "Developer Tool"
short_description = "Desktop terminal application for SSH, SFTP, and secure configuration management."
long_description = """
Miaominal is a desktop terminal application built with Rust, GPUI, and alacritty_terminal.
It focuses on SSH sessions, SFTP file transfers, configuration management, and secure credential storage.
"""
linux_use_terminal = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
