[package]
name = "miaominal-agent"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
miaominal-core = { path = "../miaominal-core" }
miaominal-secrets = { path = "../miaominal-secrets" }
miaominal-ssh = { path = "../miaominal-ssh" }
miaominal-storage = { path = "../miaominal-storage" }
reqwest.workspace = true
rig-core.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
