[package]
name = "miaominal-agent"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
futures.workspace = true
miaominal-core = { path = "../miaominal-core" }
miaominal-secrets = { path = "../miaominal-secrets" }
miaominal-settings = { path = "../miaominal-settings" }
miaominal-ssh = { path = "../miaominal-ssh" }
miaominal-storage = { path = "../miaominal-storage" }
log.workspace = true
reqwest.workspace = true
rig-core.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
