[package]
name = "miaominal-secrets"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
keyring.workspace = true
log.workspace = true
miaominal-paths = { path = "../miaominal-paths" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
