[package]
name = "miaominal-secrets"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
keyring.workspace = true
log.workspace = true
memsafe.workspace = true
miaominal-paths = { path = "../miaominal-paths" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
zeroize.workspace = true
