[package]
name = "miaominal-services"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
log.workspace = true
miaominal-agent = { path = "../miaominal-agent" }
miaominal-core = { path = "../miaominal-core" }
miaominal-paths = { path = "../miaominal-paths" }
miaominal-secrets = { path = "../miaominal-secrets" }
miaominal-settings = { path = "../miaominal-settings" }
miaominal-sftp = { path = "../miaominal-sftp" }
miaominal-ssh = { path = "../miaominal-ssh" }
miaominal-storage = { path = "../miaominal-storage" }
miaominal-sync = { path = "../miaominal-sync" }
rand.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
