[package]
name = "miaominal-settings"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
fontdb.workspace = true
gpui.workspace = true
gpui-component.workspace = true
material-colors.workspace = true
serde.workspace = true
sys-locale.workspace = true
toml.workspace = true
uuid.workspace = true
