[package]
name = "miaominal-settings"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
fontdb.workspace = true
gpui.workspace = true
gpui-component.workspace = true
material-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
sys-locale.workspace = true
toml.workspace = true
uuid.workspace = true
