[package]
name = "miaominal-sftp"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
futures.workspace = true
log.workspace = true
miaominal-core = { path = "../miaominal-core" }
miaominal-secrets = { path = "../miaominal-secrets" }
miaominal-ssh = { path = "../miaominal-ssh" }
miaominal-storage = { path = "../miaominal-storage" }
russh.workspace = true
russh-sftp.workspace = true
tokio.workspace = true
