[package]
name = "miaominal-ssh"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
futures.workspace = true
log.workspace = true
miaominal-core = { path = "../miaominal-core" }
miaominal-secrets = { path = "../miaominal-secrets" }
miaominal-storage = { path = "../miaominal-storage" }
miaominal-terminal = { path = "../miaominal-terminal" }
russh.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
