[package]
name = "miaominal-ssh"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
futures.workspace = true
log.workspace = true
miaominal-core = { path = "../miaominal-core" }
miaominal-secrets = { path = "../miaominal-secrets" }
miaominal-storage = { path = "../miaominal-storage" }
miaominal-terminal = { path = "../miaominal-terminal" }
russh.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
