[package]
name = "miaominal-storage"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
log.workspace = true
miaominal-core = { path = "../miaominal-core" }
miaominal-paths = { path = "../miaominal-paths" }
miaominal-secrets = { path = "../miaominal-secrets" }
miaominal-settings = { path = "../miaominal-settings" }
rand.workspace = true
roxmltree.workspace = true
russh.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
