[package]
name = "miaominal-sync"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
log.workspace = true
miaominal-core = { path = "../miaominal-core" }
miaominal-paths = { path = "../miaominal-paths" }
miaominal-secrets = { path = "../miaominal-secrets" }
miaominal-settings = { path = "../miaominal-settings" }
miaominal-storage = { path = "../miaominal-storage" }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
