[package]
name = "miaominal-ui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
alacritty_terminal.workspace = true
anyhow.workspace = true
futures.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
language.workspace = true
log.workspace = true
miaominal-agent = { path = "../miaominal-agent" }
miaominal-core = { path = "../miaominal-core" }
miaominal-secrets = { path = "../miaominal-secrets" }
miaominal-services = { path = "../miaominal-services" }
miaominal-settings = { path = "../miaominal-settings" }
miaominal-sftp = { path = "../miaominal-sftp" }
miaominal-ssh = { path = "../miaominal-ssh" }
miaominal-storage = { path = "../miaominal-storage" }
miaominal-sync = { path = "../miaominal-sync" }
miaominal-terminal = { path = "../miaominal-terminal" }
notify.workspace = true
open.workspace = true
rfd.workspace = true
rust-embed.workspace = true
serde_json.workspace = true
settings.workspace = true
theme.workspace = true
theme_settings.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-css.workspace = true
tree-sitter-json.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
unicode-segmentation.workspace = true
uuid.workspace = true
zed-markdown.workspace = true
