[package]
name = "miaominal-ui"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
alacritty_terminal.workspace = true
anyhow.workspace = true
base64.workspace = true
futures.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
image = { workspace = true, features = ["png", "jpeg", "gif", "webp", "bmp"] }
log.workspace = true
miaominal-agent = { path = "../miaominal-agent" }
miaominal-core = { path = "../miaominal-core" }
miaominal-secrets = { path = "../miaominal-secrets" }
miaominal-services = { path = "../miaominal-services" }
miaominal-settings = { path = "../miaominal-settings" }
miaominal-sftp = { path = "../miaominal-sftp" }
miaominal-ssh = { path = "../miaominal-ssh" }
miaominal-storage = { path = "../miaominal-storage" }
miaominal-sync = { path = "../miaominal-sync" }
miaominal-terminal = { path = "../miaominal-terminal" }
notify.workspace = true
open.workspace = true
rfd.workspace = true
rust-embed.workspace = true
serde_json.workspace = true
settings.workspace = true
theme.workspace = true
theme_settings.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
unicode-segmentation.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "NSBitmapImageRep",
    "NSImage",
    "NSImageRep",
    "NSWorkspace",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "NSData",
    "NSDictionary",
    "NSGeometry",
    "NSObject",
    "NSString",
    "alloc",
    "objc2-core-foundation",
] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
mime_guess = "2.0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
